AC_INIT([cpp-crash], [0.1], [EdSG@users.noreply.github.com])
AM_INIT_AUTOMAKE([foreign no-dist no-installman no-installinfo subdir-objects -Wall -Werror])
AC_PROG_CC
AC_PROG_CXX
AC_LANG([C++])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/2-from-c-to-cpp/Makefile
    src/3-classes/Makefile
    src/4-inheritance/Makefile
])
AC_OUTPUT
